# dx11Practice

./: .gitignore  CMakeLists.txt  CMakeMacro.txt  CMake_PreCompiled.txt
Chapter/21_shadowmapping/shadowmapping/: CMakeLists.txt  Effects.cpp  Effects.h  ShadowMap.cpp  Sky.h  Vertex.h  main.cpp
Chapter/22_ambient_occlusion/ambientOcclusion/: CMakeLists.txt  Effects.cpp  Effects.h  Octree.cpp  Octree.h  Vertex.cpp  Vertex.h  main.cpp
Chapter/22_ambient_occlusion/ssao/: CMakeLists.txt  Effects.cpp  Effects.h  RenderStates.cpp  RenderStates.h  ShadowMap.h  Ssao.cpp  Ssao.h  main.cpp
Chapter/23_meshes/mesh/: BasicModel.h  CMakeLists.txt  LoadM3d.h  MeshGeometry.h  Ssao.h  main.cpp
Chapter/24_quaternion/quaternion/: AnimationHelper.cpp  AnimationHelper.h  CMakeLists.txt  LoadM3d.cpp  Ssao.cpp  Vertex.cpp
Chapter/25_charactor_animation/skinnedMesh/: BasicModel.cpp  CMakeLists.txt  Effects.cpp  Effects.h  LoadM3d.cpp  LoadM3d.h  SkinnedData.cpp  SkinnedModel.h  Vertex.cpp  Vertex.h  main.cpp
Chapter/6/Box/: BoxDemo.cpp  CMakeLists.txt
Chapter/blending_9/blending/: CMakeLists.txt  main.cpp
Chapter/camera_14/camera/: CMakeLists.txt  main.cpp
Chapter/compute_12/blur/: BlurFilter .cpp  BlurFilter.h  CMakeLists.txt  Effects.cpp  main.cpp
Chapter/compute_12/compute/: CMakeLists.txt  Effects.cpp  Effects.h  main.cpp
Chapter/compute_12/compute/FX/: VecAdd.fx
Chapter/compute_12/wave/: CMakeLists.txt  Effects.cpp  Effects.h  main.cpp
Chapter/cube_map_17/cubeMap/: CMakeLists.txt  Effects.h  Sky.cpp  Vertex.h  main.cpp
Chapter/cube_map_17/dynamicCubeMap/: CMakeLists.txt  Effects.cpp  Vertex.cpp  main.cpp
Chapter/geometry_11/Explosion/: CMakeLists.txt  Effects.cpp  Effects.h  RenderStates.h  Vertex.cpp  main.cpp
Chapter/geometry_11/Explosion/FX/: Explosion.fx
Chapter/geometry_11/TreeBillboard/: CMakeLists.txt  Effects.cpp  Effects.h  Vertex.cpp  Vertex.h  main.cpp
Chapter/geometry_11/TreeBillboard/FX/: Cylinder.fx  Sphere.fx  TreeSprite.fx
Chapter/gpu_pro/colorQuantization/: CMakeLists.txt  ColorQuantizer.cpp  ColorQuantizer.h  Effects.cpp  Effects.h  RenderStates.cpp  RenderStates.h  Vertex.cpp  Vertex.h  main.cpp
Chapter/gpu_pro/phongTessellation/: CMakeLists.txt  RenderStates.cpp  RenderStates.h  main.cpp
Chapter/instance_15/instance/: CMakeLists.txt  Effects.cpp  Effects.h  Vertex.cpp  Vertex.h  main.cpp
Chapter/instance_15/instance/FX/: InstancedBasic.fx
Chapter/lighting_7/lighting/: CMakeLists.txt  main.cpp
Chapter/normal_map_18/normalMap/: CMakeLists.txt  Effects.cpp  Effects.h  RenderStates.cpp  RenderStates.h  main.cpp
Chapter/normal_map_18/normalMap/FX/: DisplacementMap.fx  LightHelper.fx
Chapter/particle_20/particle/: CMakeLists.txt  Effects.cpp  Effects.h  ParticleSystem.cpp  ParticleSystem.h  Terrain.h  Vertex.cpp  Vertex.h  main.cpp
Chapter/picking_16/picking/: CMakeLists.txt  Effects.h  Vertex.h  main.cpp
Chapter/picking_16/picking/FX/: Basic.fx
Chapter/stencil_10/cylinder/: CMakeLists.txt  RenderStates.cpp  Vertex.cpp  main.cpp
Chapter/stencil_10/mirror/: CMakeLists.txt  Effects.cpp  RenderStates.cpp  RenderStates.h  Vertex.h  main.cpp
Chapter/terrain_19/terrain/: CMakeLists.txt  Effects.cpp  Effects.h  Terrain.cpp  Vertex.cpp  Vertex.h  main.cpp
Chapter/tessellation_13/basicTessellation/: CMakeLists.txt  Effects.cpp  Effects.h  Vertex.cpp  Vertex.h  main.cpp
Chapter/tessellation_13/basicTessellation/FX/: LightHelper.fx  Tessellation.fx
Chapter/tessellation_13/bezierPatch/: CMakeLists.txt  Effects.cpp  Effects.h  Vertex.cpp  main.cpp
Chapter/tessellation_13/bezierPatch/FX/: BezierTessellation.fx  Blur.fx
Chapter/tessellation_13/icosahedron/: CMakeLists.txt  Effects.cpp  Effects.h  Vertex.cpp  main.cpp
Chapter/tessellation_13/icosahedron/FX/: IcosahedronTessellation.fx
Chapter/texture_8/Crate/: CMakeLists.txt  Effects.cpp  Effects.h  Vertex.h  main.cpp
Chapter/texture_8/FrameAnimCrate/: CMakeLists.txt  Vertex.cpp  main.cpp
Chapter/texture_8/RotateTextureCrate/: CMakeLists.txt  Effects.cpp  Effects.h  main.cpp
Chapter/texture_8/RotateTextureCrate/FX/: Basic.fx
Common/: CMakeLists.txt  GeometryGenerator.cpp  GeometryGenerator.h  LightHelper.h  MathHelper.h  TextureMgr.cpp  Waves.h  d3dUtil.cpp  d3dUtil.h  xnacollision.cpp  xnacollision.h
Common/Effect/: Effects.cpp  Effects.h  Vertex.cpp  Vertex.h
Common/Model/: BasicModel.h  LoadM3d.cpp  LoadM3d.h  MeshGeometry.cpp  SkinnedData.h  SkinnedModel.cpp  SkinnedModel.h
media/FX/: AmbientOcclusion.fx  Basic.fx  BasicLightPixel.fx  BasicSkinnedEffect.fx  BasicStruct.fx  BasicVertex.fx  BuildShadowMap.fx  ColorQuantizationDefine.fx  ColorQuantizationIterate.fx  ColorQuantizationOutput.fx  ColorQuantizationPallete.fx  DebugTexture.fx  Fire.fx  LightHelper.fx  PhongTessellationSkinnedEffect.fx  PhongTessellationVertex.fx  Rain.fx  ShadowMapBasic.fx  ShadowMapDisplacementMap.fx  ShadowMapNormalMap.fx  Ssao.fx  SsaoBlur.fx  SsaoNormalDepth.fx  SsaoShadowMapBasic.fx  SsaoShadowMapDisplacementMap.fx  SsaoShadowMapNormalMap.fx  Terrain.fx  preprocess_fx_debug.bat
