AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})
	
LINK_DIRECTORIES(
../../../../3rd/lib
)
INCLUDE_DIRECTORIES(
../../../Common;
../../../3rd/include/fx11;
../../../3rd/include/directXTK;
)

ADD_EXE( Quaternion "${INC}" "${SRC}" )
SET_TARGET_PROPERTIES(Quaternion PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${MEDIA_DIR}")
SET_TARGET_PROPERTIES(Quaternion PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS")
SET_PROPERTY(TARGET Quaternion PROPERTY FOLDER "Chapter/Quaternion")

ADD_DEPENDENCIES( Quaternion Common )
TARGET_LINK_LIBRARIES( Quaternion Common )
FOREACH(item ${LINK_LIB_DEBUG})
	TARGET_LINK_LIBRARIES(Quaternion debug ${item})
ENDFOREACH(item)
FOREACH(item ${LINK_LIB_RELEASE})
	TARGET_LINK_LIBRARIES(Quaternion optimized ${item})
ENDFOREACH(item)