AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})
	
LINK_DIRECTORIES(
../../../../3rd/lib
)
INCLUDE_DIRECTORIES(
../../../Common;
../../../3rd/include/fx11;
../../../3rd/include/directXTK;
)

ADD_EXE( SkinnedMesh "${INC}" "${SRC}" )
SET_TARGET_PROPERTIES(SkinnedMesh PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${MEDIA_DIR}")
SET_TARGET_PROPERTIES(SkinnedMesh PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS")
SET_PROPERTY(TARGET SkinnedMesh PROPERTY FOLDER "Chapter/CharactorAnimation")

ADD_DEPENDENCIES( SkinnedMesh Common )
TARGET_LINK_LIBRARIES( SkinnedMesh Common )
FOREACH(item ${LINK_LIB_DEBUG})
	TARGET_LINK_LIBRARIES(SkinnedMesh debug ${item})
ENDFOREACH(item)
FOREACH(item ${LINK_LIB_RELEASE})
	TARGET_LINK_LIBRARIES(SkinnedMesh optimized ${item})
ENDFOREACH(item)