AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})
	
LINK_DIRECTORIES(
../../../../3rd/lib
)
INCLUDE_DIRECTORIES(
../../../Common;
../../../3rd/include/fx11;
../../../3rd/include/directXTK;
)

ADD_EXE( Picking "${INC}" "${SRC}" )
SET_TARGET_PROPERTIES(Picking PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${MEDIA_DIR}")
SET_TARGET_PROPERTIES(Picking PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS")
SET_PROPERTY(TARGET Picking PROPERTY FOLDER "Chapter/Picking")

ADD_DEPENDENCIES( Picking Common )
TARGET_LINK_LIBRARIES( Picking Common )
FOREACH(item ${LINK_LIB_DEBUG})
	TARGET_LINK_LIBRARIES(Picking debug ${item})
ENDFOREACH(item)
FOREACH(item ${LINK_LIB_RELEASE})
	TARGET_LINK_LIBRARIES(Picking optimized ${item})
ENDFOREACH(item)