AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})
	
LINK_DIRECTORIES(
../../../../3rd/lib
)
INCLUDE_DIRECTORIES(
../../../Common;
../../../3rd/include/fx11;
../../../3rd/include/directXTK;
)

ADD_EXE( FrameAnimCrate "${INC}" "${SRC}" )
SET_TARGET_PROPERTIES(FrameAnimCrate PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
SET_TARGET_PROPERTIES(FrameAnimCrate PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS")
SET_PROPERTY(TARGET FrameAnimCrate PROPERTY FOLDER "Chapter/Texture")

ADD_DEPENDENCIES( FrameAnimCrate Common )
TARGET_LINK_LIBRARIES( FrameAnimCrate Common )
FOREACH(item ${LINK_LIB_DEBUG})
	TARGET_LINK_LIBRARIES(FrameAnimCrate debug ${item})
ENDFOREACH(item)
FOREACH(item ${LINK_LIB_RELEASE})
	TARGET_LINK_LIBRARIES(FrameAnimCrate optimized ${item})
ENDFOREACH(item)